--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "scanner-app",
   "version": "1.0.0",
-  "description": "Scanner page with pair code and session linking",
+  "description": "WhatsApp device scanner & bot launcher",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "itachi-prime99",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "@hapi/boom": "^10.0.1",
+    "@whiskeysockets/baileys": "^6.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
